--- a/LawerPortfolio/src/index.css
+++ b/LawerPortfolio/src/index.css
@@ -2,6 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background: linear-gradient(
+    to right,
+    #eab308 0%,
+    #eab308 50%,
+    hsl(190deg, 30%, 15%) 50%,
+    hsl(190deg, 30%, 15%) 100%
+  );
+  font-family: "Arial", sans-serif;
+  overflow-x: hidden;
+}
+
+.bg-blog {
+  background: linear-gradient(
+    to right,
+    #eab308 0%,
+    #eab308 50%,
+    hsl(190deg, 30%, 15%) 50%,
+    hsl(190deg, 30%, 15%) 100%
+  );
+}
+
+@media (max-width: 700px) {
+  .bg-blog {
+    background: linear-gradient(
+      to bottom,
+      #eab308 0%,
+      #eab308 50%,
+      hsl(190deg, 30%, 15%) 50%,
+      hsl(190deg, 30%, 15%) 100%
+    );
+  }
+}
+
 .services-section {
   display: flex;
   flex-direction: column;
