--- a/LawerPortfolio/src/components/content/CardSection.css
+++ b/LawerPortfolio/src/components/content/CardSection.css
@@ -1,5 +1,3 @@
-
-
 :root {
   --cards: 4;
   --cardHeight: 87vh;
@@ -39,7 +37,6 @@
 }
 
 .split-color-text {
-  font-size: 37px;
   font-weight: bolder;
   color: white;
   background: linear-gradient(
@@ -56,7 +53,6 @@
 
 @media (max-width: 700px) {
   .split-color-text {
-    font-size: 37px;
     font-weight: bolder;
     color: white;
     background: linear-gradient(
@@ -68,7 +64,6 @@
     );
     transform: translate(0%, 50%);
     width: 100%;
-    padding-block: 8px;
   }
 }
 
@@ -80,8 +75,8 @@
     #eab308 50%,
     #eab308 100%
   );
-  transform: translate(117%, 50%);
-  width: 30%;
+  transform: translate(33%, 50%);
+  width: 60%;
   padding-block: 8px;
 }
 @media (max-width: 700px) {
@@ -95,7 +90,7 @@
     );
     transform: translate(0%, 50%);
     width: 100%;
-    padding-block: 20px;
+    padding-bottom: 40px;
   }
 }
 
