--- a/LawerPortfolio/src/index.css
+++ b/LawerPortfolio/src/index.css
@@ -10,7 +10,8 @@ body {
     hsl(190deg, 30%, 15%) 50%,
     hsl(190deg, 30%, 15%) 100%
   );
-  font-family: "Arial", sans-serif;
+  font-family: "Playfair Display", serif
+  ;
   overflow-x: hidden;
 }
 
