--- a/LawerPortfolio/src/components/content/CardSection.css
+++ b/LawerPortfolio/src/components/content/CardSection.css
@@ -8,7 +8,6 @@
 .container {
   width: 90%;
   margin: 0 auto;
-
   text-align: center;
 }
 
@@ -19,7 +18,6 @@
   grid-template-columns: 1fr;
   grid-template-rows: repeat(var(--cards), var(--cardHeight));
   gap: var(--cardMargin);
-  padding-bottom: calc(var(--cards) * var(--cardTopPadding));
   margin-bottom: var(--cardMargin);
 }
 
@@ -96,6 +94,9 @@
 
 .card {
   position: sticky;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 0;
   padding-top: calc(var(--index) * var(--cardTopPadding));
 }
@@ -105,39 +106,90 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px); */
   border: 1px solid rgba(255, 255, 255, 0.3);
+  width: 70%;
+  height: 450px;
 }
 #card2 .card-body {
   background-image: url("../../assets/services2.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+  width: 70%;
+  height: 450px;
 }
 #card3 .card-body {
   background-image: url("../../assets/services3.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+
   border: 1px solid rgba(255, 255, 255, 0.3);
+  width: 70%;
+  height: 450px;
 }
 #card4 .card-body {
   background-image: url("../../assets/services4.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+  width: 70%;
+  height: 450px;
+}
+
+@media (max-width: 700px) {
+  #card1 .card-body {
+    background-image: url("../../assets/services1.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    width: 100%;
+    height: 600px;
+  }
+}
+
+@media (max-width: 700px) {
+  #card2 .card-body {
+    background-image: url("../../assets/services1.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    width: 100%;
+    height: 600px;
+  }
+}
+@media (max-width: 700px) {
+  #card3 .card-body {
+    background-image: url("../../assets/services1.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    width: 100%;
+    height: 600px;
+  }
+}
+@media (max-width: 700px) {
+  #card4 .card-body {
+    background-image: url("../../assets/services1.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    width: 100%;
+    height: 600px;
+  }
 }
 
 .main_card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
 }
@@ -166,8 +218,7 @@ h2 {
     #eab208bb 52%,
     #eab20810 100%
   );
-  width: 50%;
-  transform: translate(45%, 50%);
+  width: 100%;
   padding-block: 8px;
   margin-bottom: 20px;
 }
@@ -181,7 +232,6 @@ h2 {
       #eab208bb 52%,
       #eab2080a 100%
     );
-    transform: translate(0%, 50%);
     padding-block: 8px;
     margin-bottom: 20px;
     width: 100%;
